--- a/DadJokes.html
+++ b/DadJokes.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <a href="fromScratch.html"> Home</a>  
+    <a href="index.html"> Home</a>  
 
     <div class="container">
         <h1>😂 Dad Joke Generator 😂</h1>
