--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div" class="banner">
                 <a href="#"> Home</a>  |
-                <a href="../index2.html"> Proffessional lookin website thingy </a> |
+                <a href="https://sausty021.github.io/prof-Web1/index.html"> Proffessional lookin website thingy </a> |
                 <a href="TabInteractive.html"> UCL Interactive </a> |
                 <a href="DadJokes.html"> jokes</a>
             </div>
